objects/Invoice__c/fields/DNU_InvoiceRefrence__c.field-meta.xml
<CustomField>
    <fullName>DNU_InvoiceRefrence__c</fullName>
    <label>DNU_InvoiceRefrence</label>
    <length>18</length>
    <type>Text</type>
</CustomField>