objects/Invoice__c/fields/Invoice_Reference__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reference__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+DNU_InvoiceRefrence__c,DNU_InvoiceRefrence__c, &apos;_blank&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Reference</label>
    <type>Text</type>
</CustomField>